propertee-core/src/test/resources/tests/112_load_reject_dead_branch.expected
Runtime error: Runtime Error at line 5:8: 'SHELL' is not available in this environment
